Source/Core/Reader/grammaireParser.cpp

// Generated from grammaire.g4 by ANTLR 4.7.1



#include "grammaireParser.h"


using namespace antlrcpp;
using namespace antlr4;

grammaireParser::grammaireParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

grammaireParser::~grammaireParser() {
  delete _interpreter;
}

std::string grammaireParser::getGrammarFileName() const {
  return "grammaire.g4";
}

const std::vector<std::string>& grammaireParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& grammaireParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgrammeContext ------------------------------------------------------------------

grammaireParser::ProgrammeContext::ProgrammeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<grammaireParser::VarGlobaleContext *> grammaireParser::ProgrammeContext::varGlobale() {
  return getRuleContexts<grammaireParser::VarGlobaleContext>();
}

grammaireParser::VarGlobaleContext* grammaireParser::ProgrammeContext::varGlobale(size_t i) {
  return getRuleContext<grammaireParser::VarGlobaleContext>(i);
}

std::vector<grammaireParser::DefinitionContext *> grammaireParser::ProgrammeContext::definition() {
  return getRuleContexts<grammaireParser::DefinitionContext>();
}

grammaireParser::DefinitionContext* grammaireParser::ProgrammeContext::definition(size_t i) {
  return getRuleContext<grammaireParser::DefinitionContext>(i);
}


size_t grammaireParser::ProgrammeContext::getRuleIndex() const {
  return grammaireParser::RuleProgramme;
}

antlrcpp::Any grammaireParser::ProgrammeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitProgramme(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::ProgrammeContext* grammaireParser::programme() {
  ProgrammeContext *_localctx = _tracker.createInstance<ProgrammeContext>(_ctx, getState());
  enterRule(_localctx, 0, grammaireParser::RuleProgramme);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(32);
        varGlobale(); 
      }
      setState(37);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(39); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(38);
      definition();
      setState(41); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << grammaireParser::T__44)
      | (1ULL << grammaireParser::T__45)
      | (1ULL << grammaireParser::T__46))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

grammaireParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t grammaireParser::InstructionContext::getRuleIndex() const {
  return grammaireParser::RuleInstruction;
}

void grammaireParser::InstructionContext::copyFrom(InstructionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- InstInitContext ------------------------------------------------------------------

grammaireParser::InitialisationContext* grammaireParser::InstInitContext::initialisation() {
  return getRuleContext<grammaireParser::InitialisationContext>(0);
}

grammaireParser::InstInitContext::InstInitContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstInitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstInit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InstReturnContext ------------------------------------------------------------------

grammaireParser::ExprContext* grammaireParser::InstReturnContext::expr() {
  return getRuleContext<grammaireParser::ExprContext>(0);
}

grammaireParser::InstReturnContext::InstReturnContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstReturnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstReturn(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InstBreakContext ------------------------------------------------------------------

grammaireParser::InstBreakContext::InstBreakContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstBreakContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstBreak(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InstDeclContext ------------------------------------------------------------------

grammaireParser::DeclarationContext* grammaireParser::InstDeclContext::declaration() {
  return getRuleContext<grammaireParser::DeclarationContext>(0);
}

grammaireParser::InstDeclContext::InstDeclContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InstblocContext ------------------------------------------------------------------

grammaireParser::BlocContext* grammaireParser::InstblocContext::bloc() {
  return getRuleContext<grammaireParser::BlocContext>(0);
}

grammaireParser::InstblocContext::InstblocContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstblocContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstbloc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InstStrucControlContext ------------------------------------------------------------------

grammaireParser::StructureControleContext* grammaireParser::InstStrucControlContext::structureControle() {
  return getRuleContext<grammaireParser::StructureControleContext>(0);
}

grammaireParser::InstStrucControlContext::InstStrucControlContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstStrucControlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstStrucControl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InstExprContext ------------------------------------------------------------------

grammaireParser::ExprContext* grammaireParser::InstExprContext::expr() {
  return getRuleContext<grammaireParser::ExprContext>(0);
}

grammaireParser::InstExprContext::InstExprContext(InstructionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InstExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstExpr(this);
  else
    return visitor->visitChildren(this);
}
grammaireParser::InstructionContext* grammaireParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 2, grammaireParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstDeclContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(43);
      declaration();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstInitContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(44);
      initialisation();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstExprContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(45);
      expr(0);
      setState(46);
      match(grammaireParser::T__0);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstblocContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(48);
      bloc();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstStrucControlContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(49);
      structureControle();
      break;
    }

    case 6: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstBreakContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(50);
      match(grammaireParser::T__1);
      break;
    }

    case 7: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<grammaireParser::InstReturnContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(51);
      match(grammaireParser::T__2);
      setState(52);
      expr(0);
      setState(53);
      match(grammaireParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarGlobaleContext ------------------------------------------------------------------

grammaireParser::VarGlobaleContext::VarGlobaleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t grammaireParser::VarGlobaleContext::getRuleIndex() const {
  return grammaireParser::RuleVarGlobale;
}

void grammaireParser::VarGlobaleContext::copyFrom(VarGlobaleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VarInitContext ------------------------------------------------------------------

grammaireParser::InitialisationContext* grammaireParser::VarInitContext::initialisation() {
  return getRuleContext<grammaireParser::InitialisationContext>(0);
}

grammaireParser::VarInitContext::VarInitContext(VarGlobaleContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::VarInitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitVarInit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDeclContext ------------------------------------------------------------------

grammaireParser::DeclarationContext* grammaireParser::VarDeclContext::declaration() {
  return getRuleContext<grammaireParser::DeclarationContext>(0);
}

grammaireParser::VarDeclContext::VarDeclContext(VarGlobaleContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}
grammaireParser::VarGlobaleContext* grammaireParser::varGlobale() {
  VarGlobaleContext *_localctx = _tracker.createInstance<VarGlobaleContext>(_ctx, getState());
  enterRule(_localctx, 4, grammaireParser::RuleVarGlobale);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VarGlobaleContext *>(_tracker.createInstance<grammaireParser::VarDeclContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(57);
      declaration();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VarGlobaleContext *>(_tracker.createInstance<grammaireParser::VarInitContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(58);
      initialisation();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

grammaireParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t grammaireParser::DeclarationContext::getRuleIndex() const {
  return grammaireParser::RuleDeclaration;
}

void grammaireParser::DeclarationContext::copyFrom(DeclarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DeclConstContext ------------------------------------------------------------------

grammaireParser::TypeContext* grammaireParser::DeclConstContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::DeclConstContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

grammaireParser::DeclConstContext::DeclConstContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::DeclConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitDeclConst(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclVarContext ------------------------------------------------------------------

grammaireParser::TypeContext* grammaireParser::DeclVarContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::DeclVarContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

grammaireParser::DeclVarContext::DeclVarContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::DeclVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitDeclVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclTabContext ------------------------------------------------------------------

grammaireParser::TypeContext* grammaireParser::DeclTabContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::DeclTabContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::DeclTabContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}

grammaireParser::DeclTabContext::DeclTabContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::DeclTabContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitDeclTab(this);
  else
    return visitor->visitChildren(this);
}
grammaireParser::DeclarationContext* grammaireParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, grammaireParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<grammaireParser::DeclConstContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(61);
      match(grammaireParser::T__3);
      setState(62);
      type();
      setState(63);
      match(grammaireParser::NAME);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<grammaireParser::DeclVarContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(65);
      type();
      setState(66);
      match(grammaireParser::NAME);
      setState(67);
      match(grammaireParser::T__0);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<grammaireParser::DeclTabContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(69);
      type();
      setState(70);
      match(grammaireParser::NAME);
      setState(71);
      match(grammaireParser::T__4);
      setState(72);
      match(grammaireParser::VAL);
      setState(73);
      match(grammaireParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitialisationContext ------------------------------------------------------------------

grammaireParser::InitialisationContext::InitialisationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t grammaireParser::InitialisationContext::getRuleIndex() const {
  return grammaireParser::RuleInitialisation;
}

void grammaireParser::InitialisationContext::copyFrom(InitialisationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- InitConstContext ------------------------------------------------------------------

grammaireParser::TypeContext* grammaireParser::InitConstContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::InitConstContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::InitConstContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}

grammaireParser::InitConstContext::InitConstContext(InitialisationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InitConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInitConst(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InitTabContext ------------------------------------------------------------------

grammaireParser::TypeContext* grammaireParser::InitTabContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::InitTabContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::InitTabContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}

grammaireParser::ParametreAppelContext* grammaireParser::InitTabContext::parametreAppel() {
  return getRuleContext<grammaireParser::ParametreAppelContext>(0);
}

grammaireParser::InitTabContext::InitTabContext(InitialisationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InitTabContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInitTab(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InitVarContext ------------------------------------------------------------------

grammaireParser::TypeContext* grammaireParser::InitVarContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::InitVarContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::InitVarContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}

grammaireParser::InitVarContext::InitVarContext(InitialisationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::InitVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInitVar(this);
  else
    return visitor->visitChildren(this);
}
grammaireParser::InitialisationContext* grammaireParser::initialisation() {
  InitialisationContext *_localctx = _tracker.createInstance<InitialisationContext>(_ctx, getState());
  enterRule(_localctx, 8, grammaireParser::RuleInitialisation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<InitialisationContext *>(_tracker.createInstance<grammaireParser::InitTabContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(77);
      type();
      setState(78);
      match(grammaireParser::NAME);
      setState(79);
      match(grammaireParser::T__4);
      setState(80);
      match(grammaireParser::VAL);
      setState(81);
      match(grammaireParser::T__6);
      setState(82);
      match(grammaireParser::T__7);
      setState(83);
      match(grammaireParser::T__8);
      setState(84);
      parametreAppel();
      setState(85);
      match(grammaireParser::T__9);
      setState(86);
      match(grammaireParser::T__0);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<InitialisationContext *>(_tracker.createInstance<grammaireParser::InitVarContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(88);
      type();
      setState(89);
      match(grammaireParser::NAME);
      setState(90);
      match(grammaireParser::T__7);
      setState(91);
      match(grammaireParser::VAL);
      setState(92);
      match(grammaireParser::T__0);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<InitialisationContext *>(_tracker.createInstance<grammaireParser::InitConstContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(94);
      match(grammaireParser::T__3);
      setState(95);
      type();
      setState(96);
      match(grammaireParser::NAME);
      setState(97);
      match(grammaireParser::T__7);
      setState(98);
      match(grammaireParser::VAL);
      setState(99);
      match(grammaireParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

grammaireParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t grammaireParser::ExprContext::getRuleIndex() const {
  return grammaireParser::RuleExpr;
}

void grammaireParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExprXorBitContext ------------------------------------------------------------------

std::vector<grammaireParser::ExprContext *> grammaireParser::ExprXorBitContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ExprXorBitContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}

grammaireParser::ExprXorBitContext::ExprXorBitContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprXorBitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprXorBit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprMultContext ------------------------------------------------------------------

std::vector<grammaireParser::ExprContext *> grammaireParser::ExprMultContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ExprMultContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}

grammaireParser::ExprMultContext::ExprMultContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprMultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprMult(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprNameContext ------------------------------------------------------------------

tree::TerminalNode* grammaireParser::ExprNameContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

grammaireParser::ExprNameContext::ExprNameContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprName(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprNoBitContext ------------------------------------------------------------------

grammaireParser::ExprContext* grammaireParser::ExprNoBitContext::expr() {
  return getRuleContext<grammaireParser::ExprContext>(0);
}

grammaireParser::ExprNoBitContext::ExprNoBitContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprNoBitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprNoBit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprCharContext ------------------------------------------------------------------

tree::TerminalNode* grammaireParser::ExprCharContext::CHAR() {
  return getToken(grammaireParser::CHAR, 0);
}

grammaireParser::ExprCharContext::ExprCharContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprCharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprChar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprSupOrEqualContext ------------------------------------------------------------------

std::vector<grammaireParser::ExprContext *> grammaireParser::ExprSupOrEqualContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ExprSupOrEqualContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}

grammaireParser::ExprSupOrEqualContext::ExprSupOrEqualContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprSupOrEqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprSupOrEqual(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprAffectContext ------------------------------------------------------------------

grammaireParser::AffectationContext* grammaireParser::ExprAffectContext::affectation() {
  return getRuleContext<grammaireParser::AffectationContext>(0);
}

grammaireParser::ExprAffectContext::ExprAffectContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprAffectContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprAffect(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprSupContext ------------------------------------------------------------------

std::vector<grammaireParser::ExprContext *> grammaireParser::ExprSupContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ExprSupContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}

grammaireParser::ExprSupContext::ExprSupContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprSupContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprSup(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprInfOrEqualContext ------------------------------------------------------------------

std::vector<grammaireParser::ExprContext *> grammaireParser::ExprInfOrEqualContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ExprInfOrEqualContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}

grammaireParser::ExprInfOrEqualContext::ExprInfOrEqualContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprInfOrEqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprInfOrEqual(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprFnctContext ------------------------------------------------------------------

tree::TerminalNode* grammaireParser::ExprFnctContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

grammaireParser::ParametreAppelContext* grammaireParser::ExprFnctContext::parametreAppel() {
  return getRuleContext<grammaireParser::ParametreAppelContext>(0);
}

grammaireParser::ExprFnctContext::ExprFnctContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any grammaireParser::ExprFnctContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExprFnct(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprDivContext ------------------------------------------------------------------
